tests/baselines/reference/nonexistentPropertyUnavailableOnPromisedType.errors.txt
tests/cases/compiler/nonexistentPropertyUnavailableOnPromisedType.ts(2,7): error TS2339: Property 'toLowerCase' does not exist on type 'Promise<number>'.


==== tests/cases/compiler/nonexistentPropertyUnavailableOnPromisedType.ts (1 errors) ====
    function f(x: Promise<number>) {
        x.toLowerCase();
          ~~~~~~~~~~~
!!! error TS2339: Property 'toLowerCase' does not exist on type 'Promise<number>'.
    }
    